--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es6": true
     },
     "extends": [
-        "airbnb", "eslint:recommended", "plugin:react/recommended"
+        "airbnb", "eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
