--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "react-player": "^2.7.2",
     "sass": "^1.30.0"
   },
   "devDependencies": {
